--- a/DWC-task1.html
+++ b/DWC-task1.html
@@ -3,6 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
+
+  <!-- レスポンシブ対応のためのviewport設定 -->
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
   <link rel="stylesheet" href="DWC-task1.css" />
   <title>【HTML・CSSを学ぼう】課題 レスポンシブ対応させよう</title>
 </head>
@@ -16,7 +20,7 @@
     <!-- box1 -->
     <div class="box">
       <span class="box-index orange">step1</span>
-      <div class="box-type box-img1"></div>
+      <div class="box-img-type box-img1"></div>
       <h3 class="box-title">タイトルが入ります</h3>
       <p class="box-text">
         文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
@@ -25,7 +29,7 @@
     <!-- box2 -->
     <div class="box">
       <div class="box-index orange">step2</div>
-      <div class="box-type box-img2"></div>
+      <div class="box-img-type box-img2"></div>
       <h3 class="box-title">タイトルが入ります</h3>
       <p class="box-text">
         文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
@@ -34,7 +38,7 @@
     <!-- box3 -->
     <div class="box">
       <div class="box-index orange">step3</div>
-      <div class="box-type box-img3"></div>
+      <div class="box-img-type box-img3"></div>
       <h3 class="box-title">タイトルが入ります</h3>
       <p class="box-text">
         文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
